# apple-music-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENCE  Makefile  README.md  main.py  pyproject.toml  song.json
.github/workflows/: code-quality.yml
cli/: auth.py  config.py  main.py
server/: app.py
server/templates/: login.html
src/cli/: auth.py  config.py  file_output.py  main.py
src/server/: app.py
tests/: test_auth.py
tests/fixtures/: test_private_key.p8
